# One-Dimensional-Visibility-Based-Marching

./: CMakeLists.txt  interface_MATLAB.m
config/: settings.config
include/environment/: directions.hpp  environment.hpp  field.hpp
include/flat_hash_map/: flat_hash_map.hpp
include/parser/: parser.hpp
include/solver/: VBM_solver.hpp  solver.hpp
src/: VBM_solver.cpp  environment.cpp  main.cpp  parser.cpp  solver.cpp  solver_march.cpp  solver_origin.cpp  solver_utils.cpp
